# fusion_odom

./: README.md  insFilterNonHolomic.odt
CPP_Implementation/: README.md
CPP_Implementation/insFilterNonHolomic/: CMakeLists.txt
CPP_Implementation/insFilterNonHolomic/config/: insFilterNonHolomic.yaml
CPP_Implementation/insFilterNonHolomic/include/: InsFilterNonHolomic.hpp
CPP_Implementation/insFilterNonHolomic/src/: InsFilterNonHolomic.cpp
CPP_Implementation/insFilterNonHolomic/types/: CMakeLists.txt
CPP_Implementation/insFilterNonHolomic/types/include/: AccelerometerBias.hpp  GyroscopeBias.hpp  InsFilterNonHolomicState.hpp  NEDPosition.hpp  NEDVelocities.hpp  Quaternion.hpp
CPP_Implementation/insFilterNonHolomic/types/src/: AccelerometerBias.cpp  GyroscopeBias.cpp  InsFilterNonHolomicState.cpp  NEDPosition.cpp  NEDVelocities.cpp  Quaternion.cpp
CPP_Implementation/insFilterNonHolonomic/: CMakeLists.txt
CPP_Implementation/insFilterNonHolonomic/config/: insFilterNonHolonomic.yaml
CPP_Implementation/insFilterNonHolonomic/include/: InsFilterNonHolonomic.hpp
CPP_Implementation/insFilterNonHolonomic/src/: InsFilterNonHolonomic.cpp  main.cpp
CPP_Implementation/insFilterNonHolonomic/types/: CMakeLists.txt
CPP_Implementation/insFilterNonHolonomic/types/include/: InsFilterNonHolonomicState.hpp  InsFilterNonHolonomicTypes.hpp
CPP_Implementation/insFilterNonHolonomic/types/src/: AccelerometerBias.cpp  GyroscopeBias.cpp  InsFilterNonHolonomicState.cpp  NEDPosition.cpp  NEDVelocities.cpp  Quaternion.cpp
Matlab_Examples/: bicycle_car_model.slx
Matlab_Examples/Test_Bag_Reader/: read_imu_data.slx  read_imu_data.slxc  sIMUReader.m
Matlab_Examples/Test_Bag_Reader/slprj/sim/varcache/read_imu_data/: checksumOfCache.mat  varInfo.mat
Matlab_Examples/Test_Bag_Reader/slprj/sim/varcache/read_imu_data/tmwinternal/: simulink_cache.xml
Matlab_Examples/exampleScripts/: KalmanFilterBlockExample.m  fGndFusionFilter.m  fGndFusionFilter.prj  read_imu_data.slxc  sFuseImuGpsData.m  sFuseImuGpsData_SIMULATION.m  sPlotCsvTrack.m
Matlab_Examples/exampleScripts/codegen/fGndFusionFilter/fixpt/fxptmp/fGndFusionFilter/html/: report.mldatx
Matlab_Examples/exampleScripts/slprj/accel/read_imu_data/: amsi_serial.mat  read_imu_data_SolverChangeInfo.mat  read_imu_data_instrumentation_settings.mat  read_imu_data_top_vm.bc
Matlab_Examples/exampleScripts/slprj/accel/read_imu_data/tmwinternal/: simulink_cache.xml
Matlab_Examples/exampleScripts/slprj/raccel/read_imu_data/tmwinternal/: minfo.mat  read_imu_data_TgtConnMgr.mat
Matlab_Examples/exampleScripts/slprj/sim/_sharedutils/: shared_file.dmr
Matlab_Examples/exampleScripts/slprj/sim/varcache/read_imu_data/: checksumOfCache.mat  varInfo.mat
Matlab_Examples/exampleScripts/slprj/sim/varcache/read_imu_data/tmwinternal/: simulink_cache.xml
Matlab_Examples/imu_gps_fusion/: HelperBox.m  HelperOrientationViewer.m  HelperPoseViewer.m  HelperPositionViewer.m  bag_gps_imu.mat  bag_gps_imu_two_laps.mat  measure_distance.m  read_imu_data.slxc  read_imu_gps_data.slxc  sFuseImuGps.asv  sFuseImuGps.m  sPlotGPSData.m  sPlotGpsData.m  sPlotImuData.m  sReadBag.asv  sample_init_state.mat
Matlab_Examples/imu_gps_fusion/slprj/accel/read_imu_data/: amsi_serial.mat  read_imu_data_SolverChangeInfo.mat  read_imu_data_instrumentation_settings.mat  read_imu_data_top_vm.bc
Matlab_Examples/imu_gps_fusion/slprj/accel/read_imu_data/tmwinternal/: simulink_cache.xml
Matlab_Examples/imu_gps_fusion/slprj/accel/read_imu_gps_data/: amsi_serial.mat  read_imu_gps_data_SolverChangeInfo.mat  read_imu_gps_data_instrumentation_settings.mat  read_imu_gps_data_top_vm.bc
Matlab_Examples/imu_gps_fusion/slprj/accel/read_imu_gps_data/tmwinternal/: simulink_cache.xml
Matlab_Examples/imu_gps_fusion/slprj/sim/varcache/read_imu_data/: checksumOfCache.mat  varInfo.mat
Matlab_Examples/imu_gps_fusion/slprj/sim/varcache/read_imu_data/tmwinternal/: simulink_cache.xml
Matlab_Examples/imu_gps_fusion/slprj/sim/varcache/read_imu_gps_data/: checksumOfCache.mat  varInfo.mat
Matlab_Examples/imu_gps_fusion/slprj/sim/varcache/read_imu_gps_data/tmwinternal/: simulink_cache.xml
ros2_nodes/gps_imu_fusion/: CMakeLists.txt  build_debug.sh  package.xml
ros2_nodes/gps_imu_fusion/config/: gps_imu_fusion.yaml
ros2_nodes/gps_imu_fusion/include/gps_imu_fusion/: gps_imu_fusion.hpp
ros2_nodes/gps_imu_fusion/launch/: gps_imu_fusion_launch.py
ros2_nodes/gps_imu_fusion/rviz2/: gps_imu_fusion.rviz
ros2_nodes/gps_imu_fusion/src/: gps_imu_fusion.cpp  gps_imu_fusion_node.cpp
